@@ -3,10 +3,12 @@ package com.fptgang.backend.mapper;
 import com.fptgang.backend.api.model.PackDto;
 import com.fptgang.backend.model.Pack;
 import com.fptgang.backend.repository.PackRepos;
+import com.fptgang.backend.util.DateTimeUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 public class PackMapper extends BaseMapper<PackDto, Pack> {
@@ -41,7 +43,12 @@ public class PackMapper extends BaseMapper<PackDto, Pack> {
             entity.setQuantity(dto.getQuantity());
             entity.setPrice(dto.getPrice());
             entity.setVisible( dto.getIsVisible() != null ? dto.getIsVisible() : entity.isVisible());
-
+            if(dto.getCreatedDate() != null) {
+                entity.setCreatedDate(dto.getCreatedDate().toLocalDateTime());
+            }
+            if(dto.getUpdatedDate() != null) {
+                entity.setUpdatedDate(dto.getUpdatedDate().toLocalDateTime());
+            }
             return entity;
         }
     }
@@ -58,8 +65,14 @@ public class PackMapper extends BaseMapper<PackDto, Pack> {
         dto.setDescription(entity.getDescription());
         dto.setQuantity(entity.getQuantity());
         dto.setPrice(entity.getPrice());
-        dto.setBlindBoxes(entity.getBlindBoxes().stream().map(blindBoxMapper::toDTO).toList());
-            dto.setIsVisible(entity.isVisible());
+        dto.setBlindBoxes(entity.getBlindBoxes().stream().map(blindBoxMapper::toDTO).collect(Collectors.toList()));
+        dto.setIsVisible(entity.isVisible());
+        if(entity.getCreatedDate() != null) {
+            dto.setCreatedDate(DateTimeUtil.fromLocalToOffset(entity.getCreatedDate()));
+        }
+        if(entity.getUpdatedDate() != null) {
+            dto.setUpdatedDate(DateTimeUtil.fromLocalToOffset(entity.getUpdatedDate()));
+        }
         // Set other fields similarly
 
         return dto;
